# DataCenter

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  docker-compose.d.yml  docker-compose.p.yml
cmake/: FindCTPLib.cmake  FindCppRedis.cmake  FindMySQL.cmake  SuperBuild.cmake
dockerfiles/: Dockerfile.dev  Dockerfile.tdengine  install_1.sh
include/: stockdrv.h
nezipreceiver/: CMakeLists.txt  basewindow.h  main.cc  mainwindow.cc  mainwindow.h  nezipreceiver.ini  winsock_initializer.h  worker.cc  worker.h
nezipsaver/: CMakeLists.txt  main.cc  receiver.cc  receiver.h  saver.cc  saver.h  service.cc  service.h
scripts/: 0_install_docker_ce  1_pull_needed_images  8_control_dev_services  dev_build.sh
